--- a/templates/services.yml
+++ b/templates/services.yml
@@ -9,13 +9,13 @@ x-app: &app
     MessagingPass: "guest"
     DbUser: "postgres"
     DbPass: "postgres"
-    CassandraPort: "guest"
+    CassandraPort: 9042
     CassandraUser: "cassandra"
     CassandraPass: "cassandra"
     ConnectionStrings__cache: "cache:6379,abortConnect=false,AllowAdmin=true"
     ConnectionStrings__messaging: "amqp://guest:guest@messaging:5672"
     ConnectionStrings__trace: "Host=db;Port=5432;Username=postgres;Password=postgres;Database=trace"
-    OTEL_EXPORTER_OTLP_ENDPOINT: "http://aspire-dashboard:4317"
+    OTEL_EXPORTER_OTLP_ENDPOINT: "http://aspire-dashboard:18889"
     services__geocoding: "https://nominatim.openstreetmap.org"
     services__routing: "https://valhalla.openstreetmap.de"
     services__service-gateway__0: "http://service-gateway:8080"
