--- a/templates/db.yml
+++ b/templates/db.yml
@@ -5,12 +5,9 @@ services:
     container_name: "db"
     image: "postgis/postgis:15-3.3"
     environment:
-      POSTGRES_HOST_AUTH_METHOD: "scram-sha-256"
-      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
+      # POSTGRES_HOST_AUTH_METHOD: "scram-sha-256"
+      # POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://aspire-dashboard:18889"
-    ports:
-    - target: 5432
-      published: 5432
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://aspire-dashboard:18889"å
     restart: unless-stopped
