--- a/templates/messaging.yml
+++ b/templates/messaging.yml
@@ -8,4 +8,5 @@ services:
       RABBITMQ_DEFAULT_USER: "guest"
       RABBITMQ_DEFAULT_PASS: "guest"
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://aspire-dashboard:18889"
+      OTEL_SERVICE_NAME: messaging
     restart: unless-stopped
