--- a/templates/warehouse.yml
+++ b/templates/warehouse.yml
@@ -6,4 +6,5 @@ services:
     image: "scylladb/scylla:5.4"
     environment:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://aspire-dashboard:4317"
+      OTEL_SERVICE_NAME: scylladb
     restart: unless-stopped
