--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,8 +1,45 @@
 ---
+role_name_check: 1
+dependency:
+  name: galaxy
+  options:
+    ignore-errors: true
+
 driver:
-  name: default
+  name: vagrant
+  provider:
+    name: libvirt
+    type: libvirt
+    options:
+      memory: 4096
+      cpus: 2
+
 platforms:
-  - name: instance
-    # you might want to add your own variables here based on what provisioning
-    # you are doing like:
-    # image: quay.io/centos/centos:stream8
+  - name: test-ubuntu
+    box: generic/ubuntu2204
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: static
+        ip: 192.168.10.10
+    groups:
+      - staging
+
+provisioner:
+  name: ansible
+  inventory:
+    host_vars:
+      instance:
+        ansible_user: ansible
+        variable0: value
+  scenario:
+    name: default
+  playbooks:
+    converge: ${MOLECULE_PLAYBOOK:-../resources/converge.yml}
+    # prepare: ../resources/prepare.yml
+    requirements: ../resources/requirements.yml
+
+lint: |
+  set -e
+  yamllint .
+  ansible-lint .
