--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,10 @@
 ---
-# defaults file for trace
+stack_name: trace
+stack_network: trace-net
+otlp_endpoint: "http://aspire-dashboard:18889"
+images:
+  cache: "docker.io/redis/redis-stack:7.2.0-v10"
+  dashboard: "mcr.microsoft.com/dotnet/nightly/aspire-dashboard:8.0.0-preview.5"
+  messaging: "rabbitmq:3-management-alpine"
+  warehouse: "scylladb/scylla:5.4"
+  db: "postgis/postgis:15-3.3"
