--- a/templates/docker-db.yml
+++ b/templates/docker-db.yml
@@ -10,3 +10,6 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: {{ otlp_endpoint }}
       OTEL_SERVICE_NAME: {{ service_name }}
     restart: unless-stopped
+    # ports:
+    #   - target: 5432
+    #     published: 5432
