--- a/templates/docker-scylladb.yml
+++ b/templates/docker-scylladb.yml
@@ -13,3 +13,8 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: {{ otlp_endpoint }}
       OTEL_SERVICE_NAME: {{ service_name }}
     restart: unless-stopped
+    # ports:
+    #   - target: 9042
+    #     published: 9042
+    #   - target: 9160
+    #     published: 9160
