--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,30 @@
 ---
+version:
 stack_name: trace
 stack_network: trace-net
+domain: trace.ng
 otlp_endpoint: "http://aspire-dashboard:18889"
+
 images:
-  cache: "docker.io/redis/redis-stack:7.2.0-v10"
+  cache: "docker.io/redis/redis-stack-server:7.2.0-v10"
   dashboard: "mcr.microsoft.com/dotnet/nightly/aspire-dashboard:8.0.0-preview.5"
-  messaging: "rabbitmq:3-management-alpine"
+  messaging: "rabbitmq:3-alpine"
   warehouse: "scylladb/scylla:5.4"
   db: "postgis/postgis:15-3.3"
+
+messaging:
+  username: "guest"
+  password: "guest"
+db:
+  username: "postgres"
+  password: "postgres"
+scylladb:
+  host: "scylladb"
+  port: 9042
+  username: "cassandra"
+  password: "cassandra"
+
+ConnectionStrings:
+  cache: "cache:6379,abortConnect=false,AllowAdmin=true"
+  messaging: "amqp://guest:guest@messaging:5672"
+  db: "Host=db;Port=5432;Username=postgres;Password=postgres;Database=trace"
