--- a/templates/docker-messaging.yml
+++ b/templates/docker-messaging.yml
@@ -15,3 +15,6 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: {{ otlp_endpoint }}
       OTEL_SERVICE_NAME: {{ service_name }}
     restart: unless-stopped
+    # ports:
+    #   - target: 5672
+    #     published: 5672
