--- a/templates/docker-cache.yml
+++ b/templates/docker-cache.yml
@@ -5,6 +5,9 @@ networks:
     name: {{ stack_network }}
     external: true
 
+volumes:
+  cache:
+
 services:
   cache:
     container_name: {{ service_name }}
@@ -13,6 +16,10 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: {{ otlp_endpoint }}
       OTEL_SERVICE_NAME: {{ service_name }}
     restart: unless-stopped
+    volumes:
+      - cache:/data
+    networks:
+      - default
     # ports:
     #   - target: 6379
     #     published: 6379
