--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -16,8 +16,10 @@ services:
     environment:
       DOTNET_DASHBOARD_UNSECURED_ALLOW_ANONYMOUS: "true"
     ports:
-    - target: 18888
-      published: 18888
-    - target: 18889
-      published: 4317
+      - target: 18888
+        published: 18888
+      - target: 18889
+        published: 4317
     restart: unless-stopped
+    networks:
+      - default
