--- a/templates/docker-messaging.yml
+++ b/templates/docker-messaging.yml
@@ -1,5 +1,8 @@
 version: "3.8"
 
+volumes:
+  messaging:
+
 networks:
   default:
     name: {{ stack_network }}
@@ -15,6 +18,8 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: {{ otlp_endpoint }}
       OTEL_SERVICE_NAME: {{ service_name }}
     restart: unless-stopped
+    networks:
+      - default
     # ports:
     #   - target: 5672
     #     published: 5672
