--- a/templates/docker-services.yml
+++ b/templates/docker-services.yml
@@ -6,15 +6,17 @@ x-app: &app
       mode: replicated
       resources:
         limits:
-          cpus: "0.5"
-          memory: 256M
+          cpus: "{{ service_cpus }}"
+          memory: "{{ service_memory }}"
         reservations:
-          cpus: "0.025"
+          cpus: "0.1"
           memory: 128M
   environment: &app-env
     OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES: "true"
     OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES: "true"
     ASPNETCORE_FORWARDEDHEADERS_ENABLED: "true"
+    ASPNETCORE_HTTP_PORTS: 8080
+    ASPNETCORE_HTTPS_PORTS: 8443
     ASPNETCORE_Kestrel__Certificates__Default__Password: ""
     ASPNETCORE_Kestrel__Certificates__Default__Path: "/app/certs/localhost.pfx"
     MessagingUser: {{ messaging.username }}
