--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 version: 0.0.1-preview.10
 stack_name: trace
 stack_network: trace-net
+proxy_network: traefik_net
 domain: trace.ng
 website_domain: preview.trace.ng
 manager_domain: manager.trace.ng
