--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -8,6 +8,9 @@ networks:
     ipam:
       config:
         - subnet: 10.10.55.0/24
+  traefik:
+    name: {{ proxy_network }}
+    external: true
 
 services:
   dashboard:
@@ -46,3 +49,4 @@ services:
         traefik.http.routers.trace-dashbaord.tls.certresolver: "{{ traefik_certresolver }}"
     networks:
       - default
+      - traefik
