--- a/templates/docker-services.yml
+++ b/templates/docker-services.yml
@@ -15,6 +15,7 @@ x-app: &app
     OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES: "true"
     OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES: "true"
     ASPNETCORE_FORWARDEDHEADERS_ENABLED: "true"
+    OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY: "in_memory"
     ASPNETCORE_HTTP_PORTS: 8080
     ASPNETCORE_HTTPS_PORTS: 8443
     ASPNETCORE_Kestrel__Certificates__Default__Password: ""
@@ -131,10 +132,12 @@ services:
         traefik.enable: "true"
         traefik.http.services.trace.loadbalancer.server.port: 8443
         traefik.http.services.trace.loadbalancer.server.scheme: https
-        traefik.http.routers.trace.rule: HostRegexp(`^.+\.trace\.ng$$`) || Host(`{{ demo_domain }}`)
+        traefik.http.routers.trace.rule: "HostRegexp(`{{ demo_domain }}`, `{subdomain:[a-z.]+}.{{ domain }}`)"
         traefik.http.routers.trace.entrypoints: "{{ traefik_entrypoints }}"
         traefik.http.routers.trace.service: trace
         traefik.http.routers.trace.tls.certresolver: "{{ traefik_certresolver }}"
+        traefik.http.routers.trace.tls.domains[0].main: "{{ demo_domain }}"
+        traefik.http.routers.trace.tls.domains[0].sans: "*.{{ domain }}"
     ports:
       - target: 8443
         published: 10010
@@ -167,7 +170,6 @@ services:
         traefik.http.routers.trace-preview.tls.certresolver: "{{ traefik_certresolver }}"
         traefik.http.routers.trace-website.rule: Host(`{{ domain }}`) || Host(`www.{{ domain }}`)
         traefik.http.routers.trace-website.entrypoints: "{{ traefik_entrypoints }}"
-        traefik.http.routers.trace-website.service: trace-preview
         traefik.http.routers.trace-website.tls.certresolver: "{{ traefik_certresolver }}"
         traefik.http.routers.trace-website.middlewares: preview-redirect
     ports:
