--- a/templates/docker-services.yml
+++ b/templates/docker-services.yml
@@ -1,7 +1,7 @@
 x-app: &app
   restart: unless-stopped
   volumes:
-    - "{{ cert_dir }}/localhost.pfx:/app/localhost.pfx:ro"
+    - "{{ cert_dir }}:/app/certs:ro"
   deploy: &app-deploy
       mode: replicated
       resources:
@@ -19,7 +19,7 @@ x-app: &app
     ASPNETCORE_HTTP_PORTS: 80
     ASPNETCORE_HTTPS_PORTS: 443
     ASPNETCORE_Kestrel__Certificates__Default__Password: ""
-    ASPNETCORE_Kestrel__Certificates__Default__Path: "/app/localhost.pfx"
+    ASPNETCORE_Kestrel__Certificates__Default__Path: "/app/certs/localhost.pfx"
     MessagingUser: {{ messaging.username }}
     MessagingPass: {{ messaging.password }}
     DbUser: {{ db.username }}
@@ -153,8 +153,6 @@ services:
     environment:
       <<: *app-env
       OTEL_SERVICE_NAME: "website"
-    volumes:
-      - "{{ cert_dir }}/localhost.pfx:/app/localhost.pfx:ro"
     deploy:
       <<: *app-deploy
       labels:
