tweaks to deployment files

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,7 +19,7 @@ otlp_endpoint: "http://dashboard:18889"
 images:
   cache: "docker.io/redis/redis-stack-server:7.2.0-v10"
   db: "docker.io/postgis/postgis:15-3.3"
-  dashboard: "mcr.microsoft.com/dotnet/nightly/aspire-dashboard:8.0.0-preview.6"
+  dashboard: "mcr.microsoft.com/dotnet/aspire-dashboard:8.0.0"
   messaging: "docker.io/rabbitmq:3-alpine"
   warehouse: "docker.io/scylladb/scylla:5.4"
 
