fix traefik rule error

--- a/templates/docker-services.yml
+++ b/templates/docker-services.yml
@@ -16,8 +16,8 @@ x-app: &app
     OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES: "true"
     ASPNETCORE_FORWARDEDHEADERS_ENABLED: "true"
     OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY: "in_memory"
-    # ASPNETCORE_HTTP_PORTS: 80
-    # ASPNETCORE_HTTPS_PORTS: 443
+    ASPNETCORE_HTTP_PORTS: 80
+    ASPNETCORE_HTTPS_PORTS: 443
     ASPNETCORE_Kestrel__Certificates__Default__Password: ""
     ASPNETCORE_Kestrel__Certificates__Default__Path: "/app/certs/localhost.pfx"
     MessagingUser: {{ messaging.username }}
@@ -132,7 +132,7 @@ services:
         traefik.enable: "true"
         traefik.http.services.trace.loadbalancer.server.port: 443
         traefik.http.services.trace.loadbalancer.server.scheme: https
-        traefik.http.routers.trace.rule: "Host(`{{ demo_domain }}`) | Host(`staging.{{ domain }}`)" # "HostRegexp(`{{ demo_domain }}`, `{subdomain:[a-z]+}.{{ domain }}`)"
+        traefik.http.routers.trace.rule: "Host(`{{ demo_domain }}`) || Host(`staging.{{ domain }}`)"
         traefik.http.routers.trace.entrypoints: "{{ traefik_entrypoints }}"
         traefik.http.routers.trace.service: trace
         traefik.http.routers.trace.tls.certresolver: "{{ traefik_certresolver }}"
